--- a/frontend/src/app/components/dashboard/search-bar/search-bar.component.html
+++ b/frontend/src/app/components/dashboard/search-bar/search-bar.component.html
@@ -1,15 +1,21 @@
 <div class="searchBar">
   <input type="text" [(ngModel)]="name" placeholder="Search" name="name" class="bar">
+
   <button mat-button class="searchButton" [routerLink]="['/s']" [queryParams]="{n: name}"><mat-icon>search</mat-icon>Search</button>
   <button mat-button class="clearIcon" *ngIf="name !== ''" matSuffix mat-icon-button (click)="name = ''"><mat-icon>clear</mat-icon></button>
 </div>
 
 <div class="catContainer" >
   <div class="bigDisplay" *ngFor="let category of categories">
-    <button class="categoryButton" [routerLink]="['/s']" [queryParams]="{c: category.value}">
-      {{category.value}}
-    </button>
+   
+      <img class= "categoryIcon" src="{{category.image}}" [routerLink]="['/s']" [queryParams]="{c: category.value}">
+      {{category.value}} 
+   <!--<button class="categoryButton" [routerLink]="['/s']" [queryParams]="{c: category.value}">
+      {{category.value}} 
+    </button>-->
   </div>
+
+   
 
   <div class="smallDisplay">
     <mat-form-field>
