--- a/frontend/src/app/components/user-registration/user-registration.component.css
+++ b/frontend/src/app/components/user-registration/user-registration.component.css
@@ -18,3 +18,10 @@
   margin-top: 1%;
   color: #F0F0F0;
 }
+
+.userRegistration{
+  background-color: #082A5D!important;
+}
+::ng-deep .mat-form-field {
+  background-color: #082A5D!important;
+}
