--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -1,4 +1,4 @@
-
+<div class = "userRegistration">
 <!--registration only-->
 <div *ngIf="!edit">
 
@@ -384,4 +384,6 @@
 
 
   <button mat-flat-button class="button_standard" [routerLink]="['/user']" routerLinkActive="active" (click)="saveUser()">Save Changes</button>
+</div>
+
 </div>
