--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -3,8 +3,8 @@
 
     <div class="nav">
       <a routerLink="/home">
-        <img src="assets/cd/loader.gif"  class="logo" alt="gif of diskette" />
-
+        <!--<img src="assets/cd/loader.gif"  class="logo" alt="gif of diskette" />-->
+          <<<<< HOME <<<<
       </a>
     </div>
     <span class="spacer"></span>
