--- a/frontend/src/app/components/header/header.component.css
+++ b/frontend/src/app/components/header/header.component.css
@@ -17,10 +17,15 @@ mat-toolbar{
 .nav {
   max-height:64px;
   height: 64px;
+  color:#B82D70;
+  text-shadow: 0px 0px 3px white;
+  font-family: 'Press Start 2P', cursive; 
+  font-size: smaller;
 }
 
 .storMainColor {
   color:  #B82D70;
+  text-shadow: 0px 0px 8px #B82D70;
 }
 
 .homeButton{
