--- a/frontend/src/app/components/user/user.component.html
+++ b/frontend/src/app/components/user/user.component.html
@@ -2,6 +2,6 @@
   <mat-list-item>
     Name: {{user.userName}}, ID:  {{user.userId}} , is Admin
     <mat-checkbox [(ngModel)]="user.admin" (ngModelChange)="onUserUpdate()" [disabled]="user.admin">Admin User</mat-checkbox>
-    <button mat-flat-button color="warn"  (click)="onUserDelete()">Delete User</button>
+    <button mat-flat-button  (click)="onUserDelete()">Delete User</button>
   </mat-list-item>
 </div>
