--- a/frontend/src/app/components/productForm/productForm.component.html
+++ b/frontend/src/app/components/productForm/productForm.component.html
@@ -3,6 +3,8 @@
   <button (click)="goBack()"><mat-icon>back</mat-icon>go back</button>
     <h2>My Product</h2>
 
+<!--add product only-->
+<div *ngIf="add">
   <mat-horizontal-stepper [linear]="true" #stepper>
     <mat-step label="Product information">
       <mat-card>
@@ -95,13 +97,6 @@
     <br>
       <mat-step label="Add a picture">
         <mat-card>
-    <mat-form-field>
-
-      <input matInput placeholder="Product Image" [(ngModel)]="productImage" name="productImage">
-      <div *ngIf="empty(productImage)" class="invalid-feedback">Please add a photo</div>
-
-    </mat-form-field>
-    <br>
 
     <p>Please add a Photo(.png, .jpg, .jpeg):</p>
     <input
@@ -114,17 +109,126 @@
     <div *ngIf="imageSelected">
       {{imageName}}
     </div>
+
+          <div *ngIf="add">
+            <br>
+            <button mat-flat-button class="button_standard" (click)="editProduct()" [disabled]="!allFieldsAreFilled()">Add product</button>
+          </div>
+
         </mat-card>
     </mat-step>
 
   </mat-horizontal-stepper>
 
+
 </div>
-<mat-card>
-  <div *ngIf="add">
-    <button mat-flat-button class="button_standard" (click)="addProduct()" [disabled]="!allFieldsAreFilled()">Add product</button>
-  </div>
-  <div *ngIf="!add">
-    <button mat-flat-button class="button_standard" (click)="editProduct()" [disabled]="!allFieldsAreFilled()">Save product</button>
-  </div>
-</mat-card>
+
+<!--edit product only-->
+<div *ngIf="!add">
+      <mat-card>
+        <mat-form-field>
+
+          <input matInput placeholder="Product Name" [(ngModel)]="productName" name="productName">
+          <div *ngIf="empty(productName)" class="invalid-feedback">Product Name</div>
+
+        </mat-form-field>
+
+
+        <mat-form-field>
+          <mat-label>Describe your Product</mat-label>
+          <textarea matInput
+                    [(ngModel)]="productDescription"
+                    cdkTextareaAutosize
+                    #autosize="cdkTextareaAutosize"
+                    cdkAutosizeMinRows="1"
+                    cdkAutosizeMaxRows="20"></textarea>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+
+          <mat-label>Select Product Category</mat-label>
+          <select matNativeControl [(ngModel)]="productCategory" value="productCategory">
+            <option value="AntiquesAndArt">Antiques & Art</option>
+            <option value="BabyAndChild">Baby & Child</option>
+            <option value="Books">Books</option>
+            <option value="OfficeAndCommercial">Office & Commercial</option>
+            <option value="ComputerAndComputer accessories">Computer & Computer accessories</option>
+            <option value="Vehicles">Vehicles</option>
+            <option value="Films">Films</option>
+            <option value="PhotoAndVideo">Photo & Video</option>
+            <option value="GardenAndCrafts">Garden & Crafts</option>
+            <option value="Housekeeping">Housekeeping</option>
+            <option value="RealEstate">Real estate</option>
+            <option value="ClothingAndAccessories">Clothing & Accessories</option>
+            <option value="Music">Music</option>
+            <option value="Collect">Collect</option>
+            <option value="ToysAndCrafts">Toys & Crafts</option>
+            <option value="SportsAndOutdoors">Sports & Outdoors</option>
+            <option value="JobOffers">Job offers</option>
+            <option value="TVAndAudio">TV & Audio</option>
+            <option value="PhoneAndNavigation">Phone & Navigation</option>
+            <option value="TicketsAndVouchers">Tickets & Vouchers</option>
+            <option value="Animals">Animals</option>
+            <option value="Miscellaneous">Miscellaneous</option>
+          </select>
+        </mat-form-field>
+
+
+      </mat-card>
+
+
+
+      <mat-card>
+        <mat-checkbox [(ngModel)]="isService">Is your product a service?</mat-checkbox>
+        <mat-checkbox class="checkboxMargin" [(ngModel)]="isRentable">Is your product rentable?</mat-checkbox>
+        <mat-checkbox class="checkboxMargin" [(ngModel)]="productDelivery">Product delivery possible?</mat-checkbox>
+
+
+      </mat-card>
+
+
+      <mat-card>
+
+        <mat-form-field>
+          <mat-label>Price</mat-label>
+          <input matInput placeholder="" [(ngModel)]="productPrice" name="productPrice">
+          <span matPrefix>CHF&nbsp;</span>
+          <span matSuffix>.00</span>
+          <div *ngIf="empty(productPrice)" class="invalid-feedback">Please add a price</div>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input matInput placeholder="Your zipcode" [(ngModel)]="productLocation" name="productLocation">
+          <div *ngIf="empty(productLocation)" class="invalid-feedback">e.g. 3012</div>
+        </mat-form-field>
+
+
+      </mat-card>
+
+
+      <mat-card>
+
+
+
+        <p>Please add a Photo(.png, .jpg, .jpeg):</p>
+        <input
+          style="display: none"
+          type="file" (change)="onFileChanged($event)"
+          #fileInput>
+        <button mat-flat-button class="button_standard" (click)="fileInput.click()">Select file </button>
+        <button mat-flat-button class="button_standard" (click)="onUpload()">Upload</button>
+
+        <div *ngIf="imageSelected">
+          {{imageName}}
+        </div>
+
+
+        <div *ngIf="!add">
+          <br>
+          <button mat-flat-button class="button_standard" (click)="editProduct()" [disabled]="!allFieldsAreFilled()">Save product</button>
+        </div>
+
+      </mat-card>
+
+
+</div>
