--- a/frontend/src/app/components/user-registration/user-registration.component.html
+++ b/frontend/src/app/components/user-registration/user-registration.component.html
@@ -20,7 +20,7 @@
       <mat-form-field>
         <input matInput placeholder="Email*" [(ngModel)]="userMail" name="userMail">
         <div *ngIf="!empty(userMail)">
-          <div *ngIf="!validateEmail(userMail)" class="invalid-feedback">Valid Email is required </div>
+          <div *ngIf="!validateEmail(userMail)" class="invalid-feedback">Valid email is required </div>
         </div>
       </mat-form-field>
 
@@ -42,7 +42,7 @@
       <mat-form-field *ngIf="!edit">
         <input matInput placeholder="Confirm Password*" [(ngModel)]="confPassword" name="confPassword" type="password">
         <ng-template [ngIf]="!empty(confPassword)">
-          <div *ngIf="!confirmPassword(confPassword)" class="invalid-feedback"> Passwords do not Match
+          <div *ngIf="!confirmPassword(confPassword)" class="invalid-feedback"> Passwords do not match
           </div>
         </ng-template>
       </mat-form-field>
@@ -210,7 +210,7 @@
 
       </div>
       <div *ngIf="edit">
-        <button mat-flat-button class="button_standard" [routerLink]="['/user']" routerLinkActive="active" (click)="saveUser()">Save Changes</button>
+        <button mat-flat-button class="button_standard" [routerLink]="['/user']" routerLinkActive="active" (click)="saveUser()">Save changes</button>
       </div>
 
 
@@ -273,7 +273,7 @@
   <mat-form-field *ngIf="!edit">
     <input matInput placeholder="Confirm Password*" [(ngModel)]="confPassword" name="confPassword" type="password">
     <ng-template [ngIf]="!empty(confPassword)">
-      <div *ngIf="!confirmPassword(confPassword)" class="invalid-feedback"> Passwords do not Match
+      <div *ngIf="!confirmPassword(confPassword)" class="invalid-feedback"> Passwords do not match
       </div>
     </ng-template>
   </mat-form-field>
@@ -381,9 +381,9 @@
 
 </mat-card>
 
-<p>*Required Fields</p>
+<p>*Required fields</p>
 
 
 
-  <button mat-flat-button class="button_standard" [routerLink]="['/user']" routerLinkActive="active" (click)="editUser()">Save Changes</button>
+  <button mat-flat-button class="button_standard" [routerLink]="['/user']" routerLinkActive="active" (click)="editUser()">Save changes</button>
 </div>
