--- a/frontend/src/app/components/dialog-body/dialog-body.component.html
+++ b/frontend/src/app/components/dialog-body/dialog-body.component.html
@@ -1,7 +1,4 @@
-<button class="clearIcon" mat-button matSuffix mat-icon-button (click)="closeDialog()">
-  <mat-icon>close</mat-icon>
-</button>
-  <h2 mat-dialog-title>Reset password</h2>
+<h2 mat-dialog-title>Reset password</h2>
 <div mat-dialog-content>
   <p>Please enter a valid email</p>
   <mat-form-field>
@@ -12,5 +9,8 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="email" [disabled]="empty(email) || !validateEmail(email)" [routerLink]="['/login']">Submit</button>
+  <button mat-button (click)="closeDialog(email)" [disabled]="empty(email) || !validateEmail(email)" [routerLink]="['/login']">Submit</button>
+  <button class="clearIcon" mat-button matSuffix mat-icon-button (click)="closeDialog(email)">
+    <mat-icon>close</mat-icon>
+  </button>
 </div>
