added zipcode filter to search request

--- a/frontend/src/app/components/search/search.component.html
+++ b/frontend/src/app/components/search/search.component.html
@@ -162,7 +162,7 @@
 
 
     </mat-form-field>
-    <button mat-button (click)="getPinsInRadius(addressPin)"><mat-icon>search</mat-icon>Go!</button>
+    <button mat-button (click)="navigateTo()"><mat-icon>search</mat-icon>Go!</button>
 
 
     <p>{{value}} km near you</p>
