--- a/frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -1,5 +1,6 @@
-
-<div class="shaded">
+<div class="admin-view">
+  <mat-tab-group>
+<mat-tab label="Products To Approve">
   <mat-list *ngFor="let user of userList">
     <mat-list-item>
     Name: {{user.userName}}, ID:  {{user.userId}} , is Admin
@@ -7,11 +8,9 @@
     <button mat-flat-button color="warn" (click)="deleteUser(user)">Delete User</button>
     </mat-list-item>
   </mat-list>
-</div>
+</mat-tab>
 
-
-<mat-tab label="Products To Approve">
-
+  <mat-tab label="Products To Approve">
 
   <div  fxLayout="row" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
     <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let productItem of productList">
@@ -35,9 +34,9 @@
       </div>
     </div>
 
-
 </mat-tab>
-
+</mat-tab-group>
+</div>
 <!--
 
   <mat-grid-list cols="4" [gutterSize]="'5px'" rowHeight="450px">
