--- a/frontend/src/app/components/leaderboard/leaderboard.component.html
+++ b/frontend/src/app/components/leaderboard/leaderboard.component.html
@@ -1,12 +1,66 @@
-<br>
-<h3>Leaderboard</h3>
+<mat-tab-group >
+  <mat-tab label="Snake Scores">
+    <br>
+    <table mat-table [dataSource]="leaderBoardSnake" class="mat-elevation-z8" class="center">
 
-<div  fxLayout="row" fxLayoutGap="2% grid" fxLayoutAlign="space-evenly stretch">
-  <div fxFlex="10%" fxFlex.xl="15%" fxFlex.lg="20%" fxFlex.md="25%" fxFlex.sm="33%" fxFlex.xs="50%" *ngFor="let LeaderBoardScore of leaderBoard">
-    <mat-card >
-      <p>works</p>
+      <!-- position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> Position </th>
+        <td mat-cell *matCellDef="let snake; let i = index;">{{i+1}}</td>
+      </ng-container>
+
+      <!-- gameScore Column -->
+      <ng-container matColumnDef="gameScore">
+        <th mat-header-cell *matHeaderCellDef> Snake score </th>
+        <td mat-cell *matCellDef="let snake"> {{snake.gameScore}} </td>
+      </ng-container>
 
 
-    </mat-card>
-  </div>
-</div>
+      <!-- userName Column -->
+      <ng-container matColumnDef="userName">
+        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <td mat-cell *matCellDef="let snake">
+          <button mat-button class="button_fill" [routerLink]="['/user', snake.userId]" routerLinkActive="active" >{{snake.userName}}</button>
+        </td>
+      </ng-container>
+
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </mat-tab>
+
+  <mat-tab label="Overall scores">
+
+    <br>
+    <table mat-table [dataSource]="leaderBoardOverAll" class="mat-elevation-z8" class="center">
+
+      <!-- position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef> Position. </th>
+        <td mat-cell *matCellDef="let snake; let i = index;">{{i+1}}</td>
+      </ng-container>
+
+      <!-- gameScore Column -->
+      <ng-container matColumnDef="gameScore">
+        <th mat-header-cell *matHeaderCellDef> Overall score </th>
+        <td mat-cell *matCellDef="let snake"> {{snake.gameScore}} </td>
+      </ng-container>
+
+
+      <!-- userName Column -->
+      <ng-container matColumnDef="userName">
+        <th mat-header-cell *matHeaderCellDef> Username </th>
+        <td mat-cell *matCellDef="let snake">
+          <button mat-button class="button_fill" [routerLink]="['/user', snake.userId]" routerLinkActive="active" >{{snake.userName}}</button>
+        </td>
+      </ng-container>
+
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </mat-tab>
+</mat-tab-group>
