--- a/frontend/src/app/components/snake-component/snake-component.component.css
+++ b/frontend/src/app/components/snake-component/snake-component.component.css
@@ -1,20 +1,33 @@
+h3 {
+  font-family: 'Press Start 2P';
+  font-weight: bolder;
+  margin-bottom: 8px;
+}
+
+br {
+  margin-bottom: 2px;
+}
+
 .game {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5em;
 }
 
 .cells {
   display: flex;
   flex-wrap: wrap;
+  border-bottom: black solid 10px;
 }
 
 .board {
   width: 260px;
-  height: 500px;
+  height: 520px;
   background-color: rgb(49, 47, 47);
-  border: black solid 10px;
+  border-left:  black solid 10px;
+  border-right:  black solid 10px;
+  border-bottom: black solid 10px;
+  display: table;
 }
 
 .console {
@@ -23,35 +36,69 @@
   top: 0;
   padding-top: 1em;
   padding-bottom: 1em;
-  border-bottom: black solid 10px;
+  border: black solid 10px;
   animation: console 1s infinite;
+  background-color: rgb(49, 47, 47);
+  width: 1060px;
+  margin: auto;
 }
 
 .instructions {
   text-align: center;
   border-bottom: black solid 10px;
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
-.instructions h3 {
-  margin-bottom: 8px;
+  margin: auto;
+  background-color: rgb(49, 47, 47);
+  border-right: black solid 10px;
+  border-left: black solid 10px;
+  border-bottom: black solid 10px;
+  width: 1060px;
 }
 
 .score {
   text-align: center;
   border-bottom: black solid 10px;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.spacer {
+  display: table-row;
+  height: 1em;
+}
+
+.border {
+  height: 10px;
+  background-color: black;
+}
+
+.score-list {
+  display: table-row;
+  text-align: center;
+  padding-top: 1em;
+}
+
+.score-list ol {
+  text-align: left;
+  margin-left: 2em;
+}
+
+.score-list li {
+  margin-bottom: 8px;
 }
 
 .buttons {
-  display: flex;
-  align-content: center;
-  padding-top: 2px;
+  display: table-row table;
+  height: 100%;
 }
 
 .buttons button {
-  padding-left: 3px;
-  padding-right: 3px;
+  display: table-row;
+  width: 230px;
+  height: 25%;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 @keyframes console {
