--- a/frontend/src/app/components/productForm/productForm.component.css
+++ b/frontend/src/app/components/productForm/productForm.component.css
@@ -7,3 +7,35 @@
   color: #F0F0F0;
   margin-bottom: 0px;
 }
+
+
+.mat-stepper-horizontal{
+  background-color: #082A5D!important;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+
+}
+
+::ng-deep .mat-horizontal-stepper-content{
+  background-color: #082A5D!important;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+
+}
+::ng-deep .mat-card{
+  background-color: #082A5D!important;
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+}
+
+::ng-deep .mat-typography{
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+
+}
+
+::ng-deep .mat-step-label .mat-step-label-active .mat-step-label-selected{
+  color: white;
+  font-family: 'Press Start 2P', cursive;
+
+}
