commit to merge, on pictures

--- a/frontend/src/app/components/admin-panel/admin-panel.component.html
+++ b/frontend/src/app/components/admin-panel/admin-panel.component.html
@@ -1,6 +1,6 @@
 <div class="admin-view">
   <mat-tab-group>
-<mat-tab label="Products To Approve">
+<mat-tab label="Users">
   <mat-list *ngFor="let user of userList">
     <mat-list-item>
     Name: {{user.userName}}, ID:  {{user.userId}} , is Admin
