--- a/frontend/src/app/components/search/search.component.css
+++ b/frontend/src/app/components/search/search.component.css
@@ -100,6 +100,16 @@ input[type=text]{
   margin-left: 10px;
 }
 
+.slider{
+  width: 175px;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.radius{
+  margin-right: 10px;
+}
+
 /** search filter small screen **/
 
 .filterCheck{
